--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     html, body {
       margin: 0;
-      background-color: #FCF9EA;
+      background-color: #0E012F;
       font-family: 'Segoe UI', sans-serif;
       color: #333;
       height: 100%;
