--- a/index.html
+++ b/index.html
@@ -187,81 +187,10 @@
 
     loadNextBatch();
   </script>
-  <!-- Notification -->
-<div id="notification" class="notification">
-  <div class="main-text">🔗 Our server is connected to YouTube</div>
-  <div class="sub-text">If videos aren’t playing correctly, you can message us on Telegram.</div>
-  <span class="close-btn">✖</span>
-</div>
 
-<style>
-  .notification {
-    position: fixed;
-    top: 24px;
-    left: 50%;
-    transform: translateX(-50%);
-    background: rgba(23, 17, 9, 0.4);
-    backdrop-filter: blur(18px);
-    -webkit-backdrop-filter: blur(18px);
-    border: 1px solid rgba(255, 255, 255, 0.08);
-    border-radius: 20px;
-    padding: 20px 32px;
-    color: #FCF9EA;
-    font-family: 'Segoe UI', sans-serif;
-    font-size: 1rem;
-    font-weight: 500;
-    z-index: 10000;
-    box-shadow: 0 12px 32px rgba(0,0,0,0.4);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    animation: fadeInSlide 0.5s ease-out;
-    max-width: 720px;
-    width: 90%;
-    text-align: center;
-  }
-
-  .main-text {
-    font-size: 1.05rem;
-    font-weight: 600;
-    margin-bottom: 8px;
-  }
-
-  .sub-text {
-    font-size: 0.9rem;
-    color: #d6d2c2;
-  }
-
-  .close-btn {
-    position: absolute;
-    top: 12px;
-    right: 20px;
-    cursor: pointer;
-    font-size: 1.2rem;
-    font-weight: bold;
-    color: #FCF9EA;
-  }
-
-  @keyframes fadeInSlide {
-    from {
-      opacity: 0;
-      transform: translateX(-50%) translateY(-20px);
-    }
-    to {
-      opacity: 1;
-      transform: translateX(-50%) translateY(0);
-    }
-  }
-</style>
-
-<script>
-  document.querySelector(".close-btn").addEventListener("click", () => {
-    document.getElementById("notification").style.display = "none";
-  });
-</script>
 <!-- Notification -->
 <div id="notification" class="notification">
-  <div class="main-text"> Our server is connected to YouTube</div>
+  <div class="main-text">Our server is connected to YouTube</div>
   <div class="sub-text">If videos aren’t playing correctly, you can message us on Telegram.</div>
   <span class="close-btn">✖</span>
 </div>
@@ -272,17 +201,16 @@
     top: 20px;
     left: 50%;
     transform: translateX(-50%);
-    width: 85vw;
-    max-width: 320px;
+    width: 280px; /* عرض دقیق و ثابت */
     background: rgba(23, 17, 9, 0.5);
-    backdrop-filter: blur(15px);
-    -webkit-backdrop-filter: blur(15px);
+    backdrop-filter: blur(14px);
+    -webkit-backdrop-filter: blur(14px);
     border: 1px solid rgba(255, 255, 255, 0.06);
     border-radius: 14px;
-    padding: 12px 16px;
+    padding: 10px 14px;
     color: #FCF9EA;
     font-family: 'Segoe UI', sans-serif;
-    font-size: 0.9rem;
+    font-size: 0.85rem;
     font-weight: 500;
     z-index: 10000;
     box-shadow: 0 10px 28px rgba(0,0,0,0.35);
@@ -294,20 +222,20 @@
   }
 
   .main-text {
-    font-size: 0.9rem;
+    font-size: 0.85rem;
     font-weight: 600;
     margin-bottom: 4px;
   }
 
   .sub-text {
-    font-size: 0.75rem;
+    font-size: 0.7rem;
     color: #d6d2c2;
   }
 
   .close-btn {
     position: absolute;
     top: 6px;
-    right: 12px;
+    right: 10px;
     cursor: pointer;
     font-size: 1rem;
     font-weight: bold;
@@ -327,9 +255,19 @@
 </style>
 
 <script>
-  document.querySelector(".close-btn").addEventListener("click", () => {
-    document.getElementById("notification").style.display = "none";
+  window.addEventListener("DOMContentLoaded", () => {
+    const closeBtn = document.querySelector("#notification .close-btn");
+    closeBtn.addEventListener("click", () => {
+      const notification = document.getElementById("notification");
+      notification.style.transition = "opacity 0.3s ease";
+      notification.style.opacity = "0";
+      setTimeout(() => {
+        notification.remove();
+      }, 300);
+    });
   });
 </script>
+
+
 </body>
 </html>
